<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/barcodeScannerFragment"
        android:icon="@drawable/qr_scan_icon"
        android:title="@string/navigation_drawer_scanner_page_item_title" />

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/star_filled_icon"
        android:title="@string/navigation_drawer_favorites_page_item_title" />

    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/history_icon"
        android:title="@string/history_fragment_label" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/settings_icon"
        android:title="@string/navigation_drawer_settings_page_item_title" />
</menu>